--- a/phil971-kant-rational-agency.org
+++ b/phil971-kant-rational-agency.org
@@ -198,7 +198,7 @@ and to raise questions for discussion.
 
 
 
-*** DONE Kant on the Synthetic A Priori
+*** DONE Notes on Kant on the Synthetic A Priori
 SCHEDULED: <2020-08-18 Tue>
 :PROPERTIES:
 :EXPORT_HUGO_TAGS: judgment analytic/synthetic truth "a priori"
@@ -549,7 +549,7 @@ including /very large/ numbers (e.g. any numbers /m/ and /n/ which might yield 
 This certainly doesn't reflect our experience when calculating such sums,
 which may yield further evidence that the judgment isn't analytically true.
 
-*** DONE Kant's ‘Copernican Revolution’
+*** DONE Notes on  Kant's ‘Copernican Revolution’
 SCHEDULED: <2020-08-18 Tue>
 :PROPERTIES:
 :EXPORT_HUGO_TAGS: idealism cognition
