--- a/phil971-kant-rational-agency.org
+++ b/phil971-kant-rational-agency.org
@@ -188,7 +188,7 @@ free action.
 :EXPORT_HUGO_SECTION: notes
 :EXPORT_HUGO_PANDOC_CITATIONS: t
 :EXPORT_HUGO_PAIRED_SHORTCODES: %mdshortcode myshortcode
-:EXPORT_BIBLIOGRAPHY: /Users/roambot/Dropbox/Work/All.bib
+:EXPORT_BIBLIOGRAPHY: /Users/roambot/Dropbox/Work/master.bib
 :EXPORT_HUGO_WEIGHT: 0
 :EXPORT_HUGO_CUSTOM_FRONT_MATTER+: :link-citations true
 :END:
@@ -199,8 +199,8 @@ and to raise questions for discussion.
 
 
 *** DONE Notes on Kant on the Synthetic A Priori
-SCHEDULED: <2020-08-18 Tue>
 :PROPERTIES:
+:EXPORT_DATE: <2020-07-04>
 :EXPORT_HUGO_TAGS: judgment analytic/synthetic truth "a priori"
 :EXPORT_FILE_NAME: kant-on-synthetic-a-priori
 :EXPORT_HUGO_CUSTOM_FRONT_MATTER: :toc true :type post :nocite '(@allison1973 @allison2004 @beck1955 @beck1956 @beck1978d @beck1969 @gardner1999 @lovejoy1906a @vancleve1999 @proops2005 @hogan2013)
@@ -550,8 +550,8 @@ This certainly doesn't reflect our experience when calculating such sums,
 which may yield further evidence that the judgment isn't analytically true.
 
 *** DONE Notes on  Kant's ‘Copernican Revolution’
-SCHEDULED: <2020-08-18 Tue>
 :PROPERTIES:
+:EXPORT_DATE: <2020-07-04>
 :EXPORT_HUGO_TAGS: idealism cognition
 :EXPORT_FILE_NAME: kant-copernican-revolution
 :EXPORT_HUGO_CUSTOM_FRONT_MATTER: :toc true :type post :nocite '(@guyer2014 @allison2004 @gardner1999 @vancleve1999 @hogan2010)
