--- a/phil971-kant-rational-agency.org
+++ b/phil971-kant-rational-agency.org
@@ -25,12 +25,23 @@
 This is the homepage for *PHIL 971* – Kant (and kantianism) on Rational Agency
 
 
-Kant famously considers moral agency to consist in acting from a grasp of rational principles as such. But what is a rational principle and what is it to act from such a principle? In this seminar we'll look at how Kant answers these questions, and evaluate the theory of rational agency that results. We'll also look at the reception of Kant's position in contemporary Anglophone philosophy, particularly in the work of Frankfurt, Korsgaard, Velleman, Reath, and Herman. Some related questions we'll be trying to find answers to include:
+Kant famously considers moral agency to consist in acting from a grasp of rational
+principles as such. But what is a rational principle and what is it to act from such
+a principle? In this seminar we'll look at how Kant answers these questions, and
+evaluate the theory of rational agency that results. We'll also look at the reception
+of Kant's position in contemporary Anglophone philosophy, particularly in the work of
+Frankfurt, Korsgaard, Velleman, Reath, and Herman. Some related questions we'll be
+trying to find answers to include:
 
 - How does Kant conceive of the connection between rational action and free action? 
 - What kind of metaphysical commitments does Kant build into his conception of
   rational action? Do any of these commitments seem plausible today? 
 - What is the importance of the capacity for self-consciousness with respect to being rational?
+  
+\\
+  
+The course syllabus is available here: [[file:/materials/phil971-syllabus-rational-agency.html][HTML]] | [[file:/materials/phil971-syllabus-rational-agency.pdf][PDF]]
+
 
 *** Schedule
 :PROPERTIES:
