--- a/phil971-kant-rational-agency.org
+++ b/phil971-kant-rational-agency.org
@@ -45,6 +45,27 @@ Kant's conception of reason.
 | 11/17 | Karl Schafer (guest)                 | Karl Schafer on Kant on reason & rationality                                                     |                                       |
 |-------+--------------------------------------+--------------------------------------------------------------------------------------------------+---------------------------------------|
 
+** Week 1 - Intro & Agent Causation 
+- RDCs
+- Agent causation
+   + Substances
+   + Powers
+   + Explanation
+   + Problems w/agent causation
+   + Bundle views
+   + Problems w/bundle views
+
+** Week 2 - Freedom
+- Freedom & Causation
+- Dependence of practical on transcendental freedom
+   + Conditions of imputation 
+
+
+** Week 3 - Control
+- Determinism vs. Predeterminism
+- The problem with time
+- Difference between Kant’s view and the “Consequence Argument”
+     
 * Handouts :noexport:
 ** TODO Handout 1 Kant's Agent :noexport:
 :PROPERTIES:
@@ -167,7 +188,6 @@ trying to find answers to include:
   
 The course syllabus is available here: [[file:/materials/phil971-syllabus-rational-agency.html][HTML]] | [[file:/materials/phil971-syllabus-rational-agency.pdf][PDF]]
 
-
 *** Schedule
 :PROPERTIES:
 :EXPORT_FILE_NAME: schedule
@@ -177,23 +197,23 @@ The course syllabus is available here: [[file:/materials/phil971-syllabus-ration
 This is a tentative schedule. Check the [[https://phil971.colinmclear.net/assignments][assignments]] page for the most current
 information.
 
-| Date  | Topic                                | Content                                                                                          | Readings                              |
-|-------+--------------------------------------+--------------------------------------------------------------------------------------------------+---------------------------------------|
-| 8/18  | Course setup/Kant's agent            | Rational Conditions/Kant on Substance & Powers                                                   | Neta, Malmgren, McLear, ch. 1         |
-| 8/25  | Kant's free agent                    | Kant’s conception of freedom/spontaneity                                                         | Third Antinomy & Groundwork, Pereboom |
-| 9/1   | Enkratic rationality                 | Control as the key component of Kant’s conception of rationality                                 | McKenna, McLear, ch. 2                |
-| 9/8   | Inference & agency                   | Kant on rational inference & agency                                                              | Neta, McLear, ch. 4                   |
-| 9/15  | Reason & principles                  | Kant on laws & their representation                                                              | Groundwork II, Reath                  |
-| 9/22  | A Compatibilist Kant?                | Does Kant need his incompatibilism for his theory of rationality?                                | Korsgaard, Ameriks                    |
-| 9/29  | Frankfurt & hierarchy                | Contemporary Kantianism & mesh theory                                                            | Frankfurt, Bratman                    |
-| 10/6  | Agency without agents?               | The 'agent' role & responsibility, bundles vs. substances                                        | Wolf, Velleman, Franklin              |
-| 10/20 | Self-consciousness I                 | What's the connection between self-consciousness & rationality?                                  | Korsgaard, Hieronymi, McLear ch. 6    |
-| 10/13 | Self-consciousness II/Paper Meetings | More on self-consciousness/Help students with their papers                                       | Burge, Soteriou                       |
-| 10/27 | Transformation & the unity of reason | Is rationality just one of many of one’s capacities or does it ‘transform’ the mind in some way? | Boyle, McLear ch. 7                   |
-| 11/3  | Teleology                            | Must the activity of reason have a purpose?                                                      | Kant, Longuenesse,                    |
-| 11/10 | Prep for Karl Schafer                | Rationality as a form of understanding                                                           | Excerpts from Karl’s book             |
-| 11/17 | Karl Schafer (guest)                 | Karl Schafer on Kant on reason & rationality                                                     | Excerpts from Karl’s book                                      |
-|-------+--------------------------------------+--------------------------------------------------------------------------------------------------+---------------------------------------|
+| Date  | Topic                                     | Content                                                                                          | Readings                              |
+|-------+-------------------------------------------+--------------------------------------------------------------------------------------------------+---------------------------------------|
+| 8/18  | Course setup/Kant's agent                 | Rational Conditions/Kant on Substance & Powers                                                   | Neta, Malmgren, McLear, ch. 1         |
+| 8/25  | Kant's free agent                         | Kant’s conception of freedom/spontaneity                                                         | Third Antinomy & Groundwork, Pereboom |
+| 9/1   | Enkratic rationality                      | Control as the key component of Kant’s conception of rationality                                 | McKenna, McLear, ch. 2                |
+| 9/8   | Inference & agency                        | Kant on rational inference & agency                                                              | Neta, McLear, ch. 4                   |
+| 9/15  | Reason & principles                       | Kant on laws & their representation                                                              | Groundwork II, Reath                  |
+| 9/22  | A Compatibilist Kant?                     | Does Kant need his incompatibilism for his theory of rationality?                                | Korsgaard, Ameriks                    |
+| 9/29  | Frankfurt & hierarchy                     | Contemporary Kantianism & mesh theory                                                            | Frankfurt, Bratman                    |
+| 10/6  | Agency without agents?                    | The 'agent' role & responsibility, bundles vs. substances                                        | Wolf, Velleman, Franklin              |
+| 10/20 | Self-consciousness I                      | What's the connection between self-consciousness & rationality?                                  | Korsgaard, Hieronymi, McLear ch. 6    |
+| 10/13 | Self-consciousness II/Paper Meetings      | More on self-consciousness/Help students with their papers                                       | Engstrom, Schafer, Burge, Soteriou    |
+| 10/27 | Transformation & the unity of reason      | Is rationality just one of many of one’s capacities or does it ‘transform’ the mind in some way? | Boyle, McLear ch. 7                   |
+| 11/3  | Teleology (guest: Sasha Mudd)             | Must the activity of reason have a purpose?                                                      | Kant, Longuenesse, Mudd               |
+| 11/10 | Control or Understanding?                 | Rationality as a form of understanding                                                           | Schafer (book excerpt)                |
+| 11/17 | The unity of reason (guest: Karl Schafer) | Karl Schafer on Kant on reason & rationality                                                     | Schafer (book excerpt)                |
+|-------+-------------------------------------------+--------------------------------------------------------------------------------------------------+---------------------------------------|
 
 
 # | Week | Date  | Topic                            |
@@ -373,8 +393,6 @@ inference, and why he thinks it is so metaphysically demanding.
 
 These are notes to supplement student reading. Their aim is to be introductory
 and to raise questions for discussion. 
-
-
 
 *** DONE Notes on Kant on the Synthetic A Priori
 :PROPERTIES:
