Add note to readings

--- a/phil971-kant-rational-agency.org
+++ b/phil971-kant-rational-agency.org
@@ -365,6 +365,9 @@ discuss the differences between ‘practical’ and ‘transcendental’ freedom
 former might depend on the latter. 
 
 **** Readings
+Please note that while I’ve provided whole sections for context, you’re only expected
+to read the specified pages. 
+
 - From Kant:
    - CPR: [[/materials/readings/kant-antinomies.pdf][The Third Antinomy]] (excerpt, A532/B560–A558/B586)
       + Note that an “antinomy” here is a conflict of reason with itself. We’ll
